styles/globals.css
@import 'fonts.css';

@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
}

@layer components {
  .container {
    @apply max-w-screen-lg px-4 lg:px-5 mx-auto;

    &.container--sm {
      @apply max-w-lg;
    }

    &.container--narrow {
      @apply max-w-[840px];
    }

    &.container--mid {
      @apply max-w-screen-mlg;
    }

    &.container--lg {
      @apply max-w-[80rem];
    }

    &.container--wide {
      @apply max-w-[83rem];
    }

    &.container--fluid {
      @apply max-w-none;
    }
  }
  .search-bar-wrapper {
    @apply flex-1 rounded-30 border-1 pl-3 pr-1 py-[3px] lg:py-2 lg:pl-5;
    @apply mx-auto;
    @apply flex flex-row items-center;
    @apply placeholder:text-grey;
  }

  .search-bar-wrapper--active {
    @apply relative z-50;

    .fa-search {
      @apply text-blue-dark;
    }

    .search-close-btn {
      @apply translate-y-0 opacity-100 pointer-events-auto delay-150;
    }
  }

  .search-bar {
    @apply outline-none flex-1 transition-all duration-100;
  }

  .search-icon {
    @apply text-xl;
    @apply transition-all duration-100;
  }

  .btn {
    @apply w-full bg-coral py-3 p-4 text-center block rounded-[4px] my-6;
    @apply !text-white font-medium;

    @apply hover:bg-coral-dark;
  }

  .basic-carousel {
    @apply max-w-full h-full;
    @apply overflow-x-scroll overflow-y-auto;
    @apply relative;
    -webkit-overflow-scrolling: touch;
    scrollbar-width: none;

    /* 
      hack necessary for hiding ios safari
      https://stackoverflow.com/a/61799019 
    */
    @apply pb-7 -mb-7;
    clip-path: inset(0 0 28px 0);
  }

  .basic-carousel::-webkit-scrollbar {
    -webkit-appearance: none;
    width: 0;
    height: 0;
    @apply bg-transparent;
  }

  .basic-carousel::-webkit-scrollbar-thumb {
    -webkit-appearance: none;
    width: 0;
    height: 0;
    @apply bg-transparent;
  }

  .basic-carousel__slider {
    @apply md:px-0 h-full gap-x-2;
    @apply flex-1 items-start flex flex-row;
    @apply max-w-none z-30;

    &::-webkit-scrollbar {
      @apply hidden;
    }
  }

  .basic-carousel__control {
    @apply h-full opacity-70 w-16 from-white to-transparent absolute top-0 z-20;
  }

  .basic-carousel__control--prev {
    @apply bg-gradient-to-r left-0;
    @apply cursor-prev-btn;
  }

  .basic-carousel__control--next {
    @apply bg-gradient-to-l right-0;
    @apply cursor-next-btn;
  }

  .basic-carousel__card {
    @apply h-full px-0 flex flex-col justify-between;
    @apply last:mr-4 bg-white;
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    -webkit-touch-callout: none;
  }

  .basic-carousel__card-wrapper {
    @apply relative p-1 lg:p-0;
  }

  .basic-carousel__card-highlight {
    @apply absolute w-full h-full left-0 top-0 z-10 rounded-md;
    background-size: 800% 800%;
    background-image: linear-gradient(
      56deg,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #ebe7e5,
      #28c9aa,
      #28c9aa,
      #28c9aa
    );
  }

  .basic-carousel__card--featured {
    @apply relative z-20;
  }

  .divider-b {
    @apply after:content-[""] after:w-[calc(100%+1rem)] after:-mx-2 after:h-[1px] after:bg-grey-light;
    @apply after:mt-3 after:block;
  }

  .divider-b-taller,
  .divider-b-8 {
    @apply after:mt-8;
  }

  .divider-b-12 {
    @apply after:mt-12;
  }

  .divider-b-16 {
    @apply after:mt-16;
  }

  .divider-b-wider {
    @apply after:content-[""] after:block after:mt-6 after:-mx-6 after:h-[2px] after:w-[calc(100%_+_3rem)] after:bg-grey-light;
  }

  .page-icons {
    @apply absolute top-[50px] w-full z-20 p-4 lg:hidden;
    @apply lg:hidden;
    @apply flex flex-row justify-between;
  }

  .page-icon-wrapper {
    @apply rounded-full bg-white bg-opacity-60 h-9 w-9 text-center text-2xl flex justify-center items-center;
    @apply shadow-md;
    @apply hover:opacity-80 duration-150 transition-opacity;
  }

  .field-wrapper {
    & + .field-wrapper {
      @apply mt-6;
    }
  }

  .text-input-wrapper {
    @apply bg-white-pure px-4 py-2 text-black w-full;
    @apply rounded-md border-1 border-grey;
    @apply flex flex-row items-center;

    input {
      @apply focus:outline-none;
    }
  }

  .footer-wrapper {
    @apply bg-blue-dark text-white mt-7;
  }
}

body {
  @apply font-sans antialiased bg-white min-h-screen;
}

h1 {
  @apply text-3xl text-blue-light font-semibold align-middle flex flex-row items-center w-full;
  @apply mb-3;
}

h2 {
  @apply text-2xl text-blue-light font-semibold align-middle flex flex-row items-center w-full;
  @apply mb-3;
  @apply lg:justify-center;
}

h3 {
  @apply text-xl;
}

h4 {
  @apply text-base text-blue-dark font-semibold;
}

h5 {
  @apply text-sm text-blue uppercase font-archivo tracking-widest;
  @apply lg:text-center;
}

.h5-alt {
  @apply text-xs uppercase font-bold tracking-2 font-archivo text-grey-dark whitespace-nowrap;
}

h6.tag {
  @apply font-archivo tracking-widest text-grey-dark uppercase;
}

ul:not(.plain) {
  @apply px-4 pt-2 pb-4;
  li {
    @apply list-disc mb-1 last:mb-0;
  }
}

a {
  @apply hover:opacity-70;
}

a:not(.motion-controlled) {
  @apply transition-all duration-200;
}

p + p {
  @apply mt-[0.5em];
}

.header {
  @apply bg-blue-dark fixed w-full top-0;
  @apply flex flex-row items-center;
  @apply lg:p-4 z-40 lg:!translate-y-0;
  @apply lg:sticky;

  .header-wrapper {
    @apply pt-1;
    @apply flex flex-row justify-between items-center relative flex-1;
    @apply absolute top-full w-full h-full;
  }
}

.logo-wrapper {
  @apply leading-none;
}

.desktop-menu-wrapper {
  @apply hidden lg:flex flex-1 flex-row gap-x-6 justify-end text-white;
  @apply pb-1;

  a {
    @apply transition-all duration-100;
    @apply hover:opacity-70;
  }
}

.icon-wrapper {
  @apply pb-1 text-white gap-x-6 flex flex-row;

  button {
    @apply hover:text-teal transition-colors duration-100;
    @apply p-2 -m-2;

    path {
      @apply stroke-current stroke-2;
      @apply transition-all duration-300;
    }
  }
}

#__next {
  @apply flex flex-col min-h-screen;
}

.main {
  @apply flex-1;
}

.modal-wrapper {
  @apply fixed w-full h-full bg-grey-dark bg-opacity-80 flex flex-row justify-end;
  @apply z-30;
}

.search-suggestions {
  @apply rounded-b-22 bg-white w-full self-start;
  @apply shadow-md z-20;
}

.search-suggestion {
  @apply py-2 text-grey-dark px-5;
  @apply last:pb-4 first:pt-4;

  .fa-history {
    @apply text-grey pr-3;
  }
}

.home-items-grid {
  *:nth-child(n + 5):nth-child(-n + 8) {
    @apply hidden lg:block;
  }
}

.footer {
  @apply flex flex-row justify-between;
  @apply px-4 py-3;
}

.social-icon {
  @apply p-2 text-2xl;
}

.carousel {
  @apply relative;
}

.carousel__dot-group {
  @apply mx-auto text-center absolute bottom-0 left-0 w-full;
}

.carousel__dot {
  @apply px-1 pb-2;
  span {
    @apply w-[10px] h-[10px] inline-block bg-white bg-opacity-30 rounded-full;
  }

  &.carousel__dot--selected {
    span {
      @apply bg-opacity-80;
    }
  }
}

.faq-section {
  @apply my-8 pb-4 first:mt-16 last:pb-0;
}

.faq-header {
  @apply bg-bg px-4 py-2;
}

.article-body {
  @apply lg:w-3/4;

  a {
    @apply text-blue;
  }

  h1,
  h2,
  h3,
  h4,
  h5,
  h6 {
    @apply block text-left my-[1em];
  }

  blockquote {
    @apply lg:w-3/4 mx-auto my-6 bg-teal p-6;
    @apply text-2xl text-white;
  }

  code {
    @apply block lg:w-3/4 whitespace-normal bg-grey-light border-1 border-white;
    @apply mx-auto my-6 p-6;
    @apply text-black;
  }
}

.form-submission-btn {
  @apply w-full lg:w-auto;
  @apply bg-coral text-white px-5 py-2 mt-4 rounded-md text-lg font-semibold;
  @apply disabled:bg-grey-light;
}

#nprogress .spinner {
  @apply !right-auto left-[calc(50vw-9px)] p-1 bg-white rounded-full animate-fade-in;
  @apply shadow;

  .spinner-icon {
    @apply border-t-teal border-l-teal;
  }
}

